--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,8 +6,8 @@ on:
     paths:
       - '*.txt'
       - '.github/workflows/**'
-  schedule:
-   - cron:  1 1 * * 0
+  #schedule:
+  # - cron:  1 1 * * 0
 jobs:
   build:
     runs-on: ubuntu-latest
